# turnout

./: Cargo.toml  LICENSE  README.md
src/: address.rs  error.rs  lib.rs  node.rs  vote_data.rs
src/rules/: approval.rs  borda.rs  liquid.rs  majority.rs  mod.rs
src/simple/: mod.rs  node.rs
