[package]
name = "turnout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
hex = "0.4.3"
log = "0.4.19"
ndarray = "0.15.6"
nohash = "0.2.0"
ordered-float = "3.7.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
sha2 = "0.10.7"
utoipa = { version = "3.4.4", features = ["axum_extras"] }
